--- a/Pages/About.html
+++ b/Pages/About.html
@@ -1,44 +1,137 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>GameVerse</title>
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+
+  <!-- Google Font for gaming vibe -->
+  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500;700&display=swap" rel="stylesheet">
+
+  <style>
+    body {
+      color: #f8f9fa;
+      font-family: 'Orbitron', sans-serif;
+    }
+    .navbar {
+      background-color: #1a1a1a;
+    }
+    .hero {
+      background-image: url('https://images.unsplash.com/photo-1598550890844-44a5cb38b915');
+      background-size: cover;
+      background-position: center;
+      height: 450px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      text-align: center;
+      font-size: 3.5rem;
+      font-weight: bold;
+      color: #00ffea;
+      text-shadow: 3px 3px 10px rgba(0, 0, 0, 0.8);
+    }
+    .info {
+      background: #1a1a1a;
+      padding: 2rem;
+      border-radius: 12px;
+      margin-bottom: 3rem;
+      box-shadow: 0 0 15px #00ffea;
+    }
+    .home-image {
+      width: 100%;
+      height: auto;
+      border-radius: 15px;
+      margin-bottom: 2rem;
+      box-shadow: 0 8px 16px rgba(0,255,255,0.2);
+    }
+    footer {
+      background: #111;
+      color: #aaa;
+      padding: 20px 0;
+      text-align: center;
+      margin-top: 50px;
+    }
+    footer a {
+      color: #00ffcc;
+      margin: 0 10px;
+      text-decoration: none;
+    }
+    footer a:hover {
+      color: #fff;
+    }
+    .navbar {
+      background-color: #000;
+    }
+  </style>
 </head>
 <body>
-    <div class="bg-secondary col-lg p-3">
-        <header>
-            <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-                <div class="container-fluid">
-                    <a class="navbar-brand" href="/">My Website</a>
-                    <div class="p-2" id="navbarNav">
-                        <ul class="navbar-nav">
-                            <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="/">Home</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="/about">About</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="/contact">Contact</a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </nav>
-        </header>
+
+  <!-- Navigation -->
+  <nav class="navbar navbar-expand-lg navbar-dark">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="/">Gaming World</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="/">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/about">About</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/contact">Contact</a>
+          </li>
+        </ul>
+      </div>
     </div>
-    <div class="container mt-5">
-        <h1>About Us</h1>
-        <p>This is the about page of our website.</p>
-        <p>We are dedicated to providing the best service possible.</p>
-        <p>Contact us for more information.</p>     
-        <p>We are located at 123 Main St, Anytown, USA.</p>
-        <p>Our phone number is (123) 456-7890.</p>
-        <p>Our email address is
-        
-        </div>
+  </nav>
+
+  <!-- Hero Section -->
+  <div class="hero">
+    Welcome to Gaming World
+  </div>
+
+  <!-- About Section -->
+  <div class="container mt-5 info">
+    <h1 class="mb-4 text-center">About </h1>
+
+    <!-- Image inside about -->
+    <img src="https://encrypted-tbn3.gstatic.com/shopping?q=tbn:ANd9GcR7oYNpbkbtqRO1y5L0Cdb7hwl10XM3kohtrr2H5D5FZTB3R_skNG6eed9Kp_dG2qVe7fix0fIkL-CZDDrry6tDASuAfVLuGZ5D2sWsDMzX4EXG8iAQkL_r" alt="Gaming Setup" class="home-image">
+
+    <p class="lead text-center">
+      Gameing World is the ultimate hub for gamers worldwide. We live and breathe gaming, from epic e-sports battles to late-night adventures. Join our community and level up your experience!
+    </p>
+
+    <div class="row mt-4">
+      <div class="col-md-6">
+        <h5>Our HQ</h5>
+        <p>123 Gamer Lane, Cyber City, USA</p>
+      </div>
+      <div class="col-md-6">
+        <h5>Get in Touch</h5>
+        <p>Phone: (999) 888-7777</p>
+        <p>Email: <a href="mailto:support@gameverse.com">support@gameverse.com</a></p>
+      </div>
+    </div>
+  </div>
+
+  <!-- Footer -->
+  <footer>
+    <p>Follow us on</p>
+    <a href="#">Facebook</a> |
+    <a href="#">Twitter</a> |
+    <a href="#">Instagram</a>
+    <p class="mt-2">&copy; 2025 Gaming World. All rights reserved.</p>
+  </footer>
+
+  <!-- Scripts -->
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl1+PpP5iHg6ZZ8nfw5FFlGIfz1zauK6T5Yt+10J6rxTZ3nQ71zCTc0ALZp" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGKtK3KjKH9dEUGA6zUpDkQb65QcfyDkVZV+zJr59b6G5Jr74h9IUn+je3v" crossorigin="anonymous"></script>
+
 </body>
 </html>
