--- a/Pages/form.html
+++ b/Pages/form.html
@@ -3,36 +3,27 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Gaming World</title>
+  <title>Contact Form</title>
 
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
 
   <style>
     body {
-      background-color: #0d0d0d;
+        background-color: #0d0d0d;
       color: #f1f1f1;
       font-family: 'Orbitron', sans-serif;
     }
-    .hero {
-      background-image: url('https://images.unsplash.com/photo-1603791440384-56cd371ee9a7?crop=entropy&cs=tinysrgb&fit=crop&h=600&w=1200');
-      background-size: cover;
-      background-position: center;
-      height: 500px;
-      position: relative;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      text-align: center;
-      color: #fff;
-      text-shadow: 2px 2px 8px rgba(0,0,0,0.9);
-      font-size: 3rem;
+    .form-container {
+        max-width: 600px;
+        margin: 50px auto;
+        padding: 20px;
+        background-color: #1a1a1a;
+        border-radius: 10px;
+        box-shadow: 0 0 15px #00ffcc;
     }
-    .info {
-      background: #1a1a1a;
-      padding: 2rem;
-      border-radius: 15px;
-      margin-top: 30px;
-      box-shadow: 0 0 10px #00ffcc;
+    .form-container h1 {
+      text-align: center;
+      margin-bottom: 20px;
     }
     footer {
       background: #111;
@@ -53,16 +44,12 @@
       background-color: #000;
     }
   </style>
-
-  <!-- Orbitron Font -->
-  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500&display=swap" rel="stylesheet">
-
+    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500&display=swap" rel="stylesheet">
 </head>
-
 <body>
 
   <!-- Navigation -->
-  <nav class="navbar navbar-expand-lg navbar-dark">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
       <a class="navbar-brand" href="/">Gaming World</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -70,10 +57,9 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ms-auto">
-
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="/form">form</a>
-
+            <a class="nav-link" href="/Home">Form</a>
+          </li>
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="/">Home</a>
           </li>
@@ -88,21 +74,29 @@
     </div>
   </nav>
 
-  <!-- Hero Section -->
-  <div class="hero">
-    Welcome to the Gaming World
+  <!-- Form Section -->
+  <div class="form-container">
+    <h1>Contact Us</h1>
+    <form action="/submit-form" method="POST">
+      <div class="mb-3">
+        <label for="name" class="form-label">Name</label>
+        <input type="text" class="form-control" id="name" name="name" required>
+      </div>
+      <div class="mb-3">
+        <label for="email" class="form-label">Email</label>
+        <input type="email" class="form-control" id="email" name="email" required>
+      </div>
+      <div class="mb-3">
+        <label for="message" class="form-label">Message</label>
+        <textarea class="form-control" id="message" name="message" rows="5" required></textarea>
+      </div>
+      <button type="submit" class="btn btn-primary w-100">Submit</button>
+    </form>
   </div>
-
-      
-  
 
   <!-- Footer -->
   <footer>
-    <p>Follow us on</p>
-    <a href="#">Facebook</a> |
-    <a href="#">Twitter</a> |
-    <a href="#">Instagram</a>
-    <p class="mt-2">&copy; 2025 Gaming World. All rights reserved.</p>
+    <p>&copy; 2025 Gaming World. All rights reserved.</p>
   </footer>
 
   <!-- Scripts -->
